feat: continue on website

--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -1,1 +1,14 @@
-there are no guild settings so ig this is a placeholder for when there will
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <%- template('head') %>
+    <title>Document</title>
+  </head>
+  <body>
+    <%- template('navbar', { client, req, user }) %> there is no guild settings
+    model yet, check back soon:tm:
+  </body>
+</html>
