--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -21,38 +21,19 @@
     </p>
     <% } %>
     <hr />
-    <div>
-      <table style="box-sizing: border-box">
-        <tbody style="box-sizing: border-box">
-          <td style="size: 1rem; box-sizing: border-box">
-            <img
-              src="<%- user.displayAvatarURL({dynamic:true, size: 32}) %>"
-              alt="Your avatar"
-              style="border-radius: 50%"
-            />
-          </td>
-
-          <td><%= user.tag %></td>
-        </tbody>
-      </table>
-      <a href="/">Home</a> <a href="/dashboard">Dashboard</a>
-      <a href="/logout">Logout</a>
-    </div>
+    <%- template('navbar', { client, req, user }) %>
     <main>
-      <ul>
-        <li>
-          <b>Commands used:</b>
-          <%= profile.commands.length %> (<%-
-          (profile.commands.length/commands.size).toFixed(2) %>%)
-        </li>
-        <li>
-          <b>Achievements: </b>
-          <%= [...(new Set(profile.achievements))].length %>/<%=
-          Object.keys(Achievement).filter(v=> !isNaN(+v)).length %> (<%=
-          [...(new Set(profile.achievements))].map(v=> Achievement[v]).join( `,
-          `.replace(/\s+$/, ' ')) %>)
-        </li>
-      </ul>
+      <h3>User Stats</h3>
+      <b>Commands used:</b>
+      <%= profile.commands.length %> (<%-
+      (profile.commands.length/commands.size).toFixed(2) %>%)
+      <br />
+      <b>Achievements: </b>
+      <%= [...(new Set(profile.achievements))].length %>/<%=
+      Object.keys(Achievement).filter(v=> !isNaN(+v)).length %> (<%= [...(new
+      Set(profile.achievements))].map(v=> Achievement[v]).join( `,
+      `.replace(/\s+$/, ' ')) %>)
+      <br />
     </main>
   </body>
 </html>
