--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,9 +20,13 @@
           procrastinating author, Lightbulb is bound to be the worst bot you
           could ever invite to your server.
           <br />
+          <br />
           If you manage to be dumb enough to invite it, you'll have <%=
-          commands.length %> glorious commands at your disposal, none of which
+          commands.size %> glorious commands at your disposal, none of which
           work as intended.
+          <br />
+          <br />
+          Thanks for reading this far. I knew you'd'nt've wanted to stop.
         </p>
         <img
           src="assets/img/help_no.png"
