--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -8,7 +8,10 @@
     <title>Document</title>
   </head>
   <body>
-    <%- template('navbar', { client, req, user }) %> there is no guild settings
-    model yet, check back soon:tm:
+    <header>
+      <h1>Lightbulb</h1>
+      <%- template('navbar', { client, req, user }) %>
+    </header>
+    Placeholder text
   </body>
 </html>
