--- a/assets/site/assets/css/global.css
+++ b/assets/site/assets/css/global.css
@@ -4,6 +4,7 @@
   --body: 'Source Sans Pro';
   --header: 'Encode Sans SC';
   --text-color: rgb(255, 217, 0);
+  --light-bg-color: rgb(127, 129, 10);
   --bg-color: rgb(11, 3, 17);
 }
 
@@ -29,6 +30,7 @@ h1 {
   margin-block-start: 0em;
   margin-block-end: 0em;
   padding-top: 1%;
+  padding-left: 1%;
 }
 
 #navbar {
@@ -59,7 +61,8 @@ a:link {
   grid-column: 1;
   grid-row: 1;
   border-radius: 4%;
-  padding: 13.5%;
+  margin: 13.5%;
+  margin-right: 0;
 }
 
 article section {
@@ -71,4 +74,27 @@ article section {
 article section p {
   grid-column: 2;
   grid-row: 1;
+  padding: 1%;
+}
+
+button {
+  background-color: var(--text-color);
+  color: var(--bg-color);
+  border: none;
+  border-radius: 10%;
+  cursor: pointer;
+  font-family: var(--header);
+}
+
+.guild {
+  padding: 2%;
+}
+
+table {
+  margin: 25%;
+  margin-top: 10%;
+  margin-bottom: 0;
+  padding: 2%;
+  border: solid 5px var(--text-color);
+  border-radius: 5%;
 }
