--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,15 +24,20 @@
           If you manage to be dumb enough to invite it, you'll have <%=
           commands.size %> glorious commands at your disposal, none of which
           work as intended.
-          <br />
-          <br />
-          Thanks for reading this far. I knew you'd'nt've wanted to stop.
         </p>
         <img
           src="assets/img/help_no.png"
           alt="Lightbulb won't help you"
           id="help_no"
         />
+      </section>
+      <section>
+        <p>
+          With absolutely nothing in common with most other bots, Lightbulb is
+          the absolute worst choice you can make from the whole variety of bots
+          on Discord. If you wanna look at a list of actually good bots, take a
+          look at <a href="//discord.bots.gg">this bot list.</a>
+        </p>
       </section>
     </article>
   </body>
