--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -12,6 +12,10 @@
       <h1>Lightbulb</h1>
       <%- template('navbar', { client, req, user }) %>
     </header>
-    Placeholder text
+
+    <form action="/guild/<% req.params.gid %>/preferences" method="patch">
+      <input type="text" placeholder="New prefix..." required />
+      <input type="submit" value="Submit" />
+    </form>
   </body>
 </html>
